--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container{
+  display: flex;
+  margin:0;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
+  text-align: center;
+  color: white;
+}
+.content_container{
+  background: black;
+  padding:1.5rem;
+}
+
+button{
+  padding: .7rem;
+  background: white;
+  
+}
